# CDSpecCollab_COSC4012020-FA24

./: .gitignore  Issue branch Instructions.txt  README.md  SettingUpGoogleCloud.md  client_secret_427010987452-jnrnabcboktashjq4a9ld5krhiv4d005.apps.googleusercontent.com.json  oauth2.py  package-lock.json  package.json
Deployed Version/cd_spec_viewer_web/: pyproject.toml  requirements.txt  settings.py  sites.json  socialaccount.json  urls.py
Deployed Version/cd_spec_viewer_web/cd_spec_viewer_web/: READBEFOREDEPLOYMENT.txt  settings.py  urls.py  wsgi.py
Deployed Version/cd_spec_viewer_web/cdspec/: models.py  urls.py  views.py
Deployed Version/cd_spec_viewer_web/cdspec/migrations/: 0001_initial.py  0004_auto_20210421_0810.py  0005_specrun_upload_user.py  0006_specrun_upload_user_string.py  0007_alter_specrun_id.py
Deployed Version/cd_spec_viewer_web/myenv/: pyvenv.cfg
Deployed Version/cd_spec_viewer_web/myenv/Scripts/: activate  activate.bat
Deployed Version/cd_spec_viewer_web/templates/: base.html
Deployed Version/cd_spec_viewer_web/templates/account/: account_inactive.html  authentication_error.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_changed.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  prassword_reset_done.html  verified_email_required.html
Deployed Version/cd_spec_viewer_web/templates/google_account/: index.html
Deployed Version/cd_spec_viewer_web/users/: adapters.py  admin.py  models.py  views.py
Django/: README.md  (+1 more)
(+507 files in other folders)
